fixed patch mapping which prevents duplicate id error, only adds actor id if not in the list